Creating db, config, installing chack, dotenv, joi

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
-DATABASE_URL = mongodb+srv://omarjibrilabdulkhadir:@cluster0.8edyqlj.mongodb.net/?retryWrites=true&w=majority
+DATABASE_URL=mongodb+srv://omarjibrilabdulkhadir:rowda1234@cluster0.8edyqlj.mongodb.net/?retryWrites=true&w=majority
+PORT=8000
